--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -623,6 +623,49 @@ rotate
 }
 
 /*---------------------------------------
+   SignUp section              
+-----------------------------------------*/
+#signup h3 {
+	padding-bottom: 18px;
+}
+
+#about .col-md-6, #about .col-md-4, #signup .col-md-4 {
+	padding-left: 0px;
+}
+
+#signup .form-control {
+	box-shadow: none;
+	border: 2px solid #f0f0f0;
+	margin-top: 0;
+	margin-bottom: 30px;
+	transition: all 0.4s ease-in-out;
+}
+
+#signup .form-control:hover {
+	border-color: #555;
+}
+
+#signup input {
+	height: 45px;
+}
+
+#signup input[type="submit"] {
+	background: #bfba55;
+	border-radius: 100px;
+	border: none;
+	color: #ffffff;
+	font-weight: bold;
+	transition: all 0.4s ease-in-out;
+}
+
+#signup input[type="submit"]:hover {
+	background: #333;
+	border-color: transparent;
+	color: #ffffff;
+}
+
+
+/*---------------------------------------
    Footer section              
 -----------------------------------------*/
 footer {
